<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/habitsFragment"
        android:icon="@drawable/ic_nav_habits"
        android:title="@string/nav_habits" />
    <item
        android:id="@+id/moodFragment"
        android:icon="@drawable/ic_nav_mood"
        android:title="Mood" />
    <item
        android:id="@+id/communityFragment"
        android:icon="@drawable/ic_nav_community"
        android:title="Community" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>